<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/BaseStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedcorners"
        android:padding="20dp">

        <EditText
            android:id="@+id/DamageInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/physical_damage_label"
            android:inputType="number" />

        <TextView
            android:id="@+id/ElementLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ElementSelect"
            android:layout_alignStart="@+id/ElementSelect"
            android:layout_alignLeft="@+id/ElementSelect"
            android:text="Element"
            android:textStyle="bold|italic" />

        <Spinner
            android:id="@+id/ElementSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ElementInput"
            android:layout_alignBottom="@+id/ElementInput"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/ElementInput" />

        <EditText
            android:id="@+id/ElementInput"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/DamageInput"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/elemental_input_label"
            android:inputType="number" />

        <EditText
            android:id="@+id/AffinityInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ElementSelect"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:elegantTextHeight="false"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/affinity_label"
            android:inputType="number|numberDecimal|numberSigned" />

        <CheckBox
            android:id="@+id/CentreBladeCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/AffinityInput"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:checked="false"
            android:text='"Centre of Blade" Bonus' />

        <TextView
            android:id="@+id/StyleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/CentreBladeCheck"
            android:text="@string/style_label"
            android:textStyle="bold|italic" />

        <Spinner
            android:id="@+id/StyleSelect"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@+id/StyleLabel"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:prompt="@string/style_select_label"
            android:spinnerMode="dropdown" />

        <RelativeLayout
            android:id="@+id/Sharpness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/StyleLabel"
            android:layout_alignParentRight="true">

            <TextView
                android:id="@+id/SharpnessLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/sharpness_label"
                android:textStyle="bold|italic" />

            <Spinner
                android:id="@+id/SharpnessSelect"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_below="@+id/SharpnessLabel"
                android:gravity="center"
                android:spinnerMode="dropdown" />

        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>