<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/BaseStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SwitchAxeIcon"
        android:background="@drawable/roundedcorners"
        android:padding="20dp">

        <EditText
            android:id="@+id/DamageInputSA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/physical_damage_label"
            android:inputType="number" />

        <TextView
            android:id="@+id/ElementLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ElementSelect"
            android:layout_alignStart="@+id/ElementSelect"
            android:layout_alignLeft="@+id/ElementSelect"
            android:text="Element"
            android:textStyle="bold|italic" />

        <Spinner
            android:id="@+id/ElementSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ElementInputSA"
            android:layout_alignBottom="@+id/ElementInputSA"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/ElementInputSA" />

        <EditText
            android:id="@+id/ElementInputSA"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/DamageInputSA"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/elemental_input_label"
            android:inputType="number" />

        <TextView
            android:id="@+id/ElementDisclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ElementInputSA"
            android:layout_alignLeft="@+id/ElementSelect"
            android:layout_alignRight="@+id/ElementInputSA"
            android:gravity="center"
            android:text="Unawakened elements are still active in Sword mode with a Dragon/Element Phial"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="15sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/AffinityInputSA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ElementDisclaimer"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:elegantTextHeight="false"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/affinity_label"
            android:inputType="number|numberDecimal|numberSigned" />

        <CheckBox
            android:id="@+id/AwakenedCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/PhialSelect"
            android:layout_alignParentRight="true"
            android:checked="true"
            android:text="Awakened Element" />

        <TextView
            android:id="@+id/PhialSelectLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/AffinityInputSA"
            android:layout_alignStart="@+id/PhialSelect"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:text="@string/phial_select" />

        <Spinner
            android:id="@+id/PhialSelect"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@+id/PhialSelectLabel"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/StyleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PhialSelect"
            android:layout_marginTop="10dp"
            android:text="@string/style_label"
            android:textStyle="bold|italic" />

        <Spinner
            android:id="@+id/StyleSelect"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@+id/StyleLabel"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:prompt="@string/style_select_label"
            android:spinnerMode="dropdown" />

        <RelativeLayout
            android:id="@+id/Sharpness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/StyleLabel"
            android:layout_alignParentRight="true">

            <TextView
                android:id="@+id/SharpnessLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/sharpness_label"
                android:textStyle="bold|italic" />

            <Spinner
                android:id="@+id/SharpnessSelect"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_below="@+id/SharpnessLabel"
                android:gravity="center"
                android:spinnerMode="dropdown" />

        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>